# ScrapYard

./: package-lock.json  package.json
src/: editor.html  editor.js  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/files/: hello_there.txt
